RESOLVED FIXED132696
Cue display events may not be registered during page load
https://bugs.webkit.org/show_bug.cgi?id=132696
Summary Cue display events may not be registered during page load
Brent Fulgham
Reported 2014-05-08 11:51:21 PDT
Because of the way 'cuechange' events are processed in the new Media Script controls code, it's possible to have a page where text tracks are added to the DOM before the handlers for add-and-remove tracks are ready. When this happens, the "cue change" events that WebKit relies on to generate the tracks for display do not get added, and captions do not get displayed. This patch changes WebKit so that we handle cue display events in the back end, which bypasses this potential start-up issue and ensure proper caption display.
Attachments
Patch (3.59 KB, patch)
2014-05-08 12:00 PDT, Brent Fulgham
eric.carlson: review+
Brent Fulgham
Comment 1 2014-05-08 11:55:38 PDT
Brent Fulgham
Comment 2 2014-05-08 12:00:22 PDT
Brent Fulgham
Comment 3 2014-05-08 12:04:09 PDT
Note You need to log in before you can comment on or make changes to this bug.